Replace deprecated methods in aai-common
Issue-ID: AAI-3589

Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>
Change-Id: I9e32b879ee0d143a6b66e06d425bed7412139e58